корректо подключить изображения и шрифты на странице

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="page">
 
   <header class="header">
-    <img src="../mesto/images/logo.svg" alt="Место" class="logo">
+    <img src="./images/logo.svg" alt="Место" class="logo">
   </header>
 
   <main class="content">
@@ -20,7 +20,7 @@
     <section class="user">
 
       <div class="user__photo">
-        <img src="../mesto/images/mainimage.jpg" alt="Фото" class="user__image">
+        <img src="./images/mainimage.jpg" alt="Фото" class="user__image">
       </div>
       <div class="user__description">
         <h1 class="user__name">Жак-Ив Кусто</h1>
