--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
   <main class="content">
 
     <section class="user">
-
-      <div class="user__photo">
-        <img src="./images/mainimage.jpg" alt="Фото" class="user__image">
-      </div>
+      <img src="./images/mainimage.jpg" alt="Фото" class="user__image">
       <div class="user__description">
         <h1 class="user__name">Жак-Ив Кусто</h1>
-        <button class="user__add-info"></button>
+        <button type="button" class="user__add-info"></button>
         <h2 class="user__info">Исследователь океана</h2>
       </div>
       <button class="user__add-photo"></button>
@@ -36,42 +33,42 @@
           <img src="./images/kar1.jpg" alt="Карачаевск" class="user-gallery__photo">
           <div class="user-gallery__caption">
             <h3 class="user-gallery__photo-name">Карачаевск</h3>
-            <div class="user-gallery__like-b"></div>
+            <button type="button" class="user-gallery__like-b"></button>
           </div>
         </li>
         <li class="user-gallery__item">
           <img src="./images/elbrus1.png" alt="Гора Эльбрус" class="user-gallery__photo">
           <div class="user-gallery__caption">
             <h3 class="user-gallery__photo-name">Гора Эльбрус</h3>
-            <div class="user-gallery__like-b"></div>
+            <button type="button" class="user-gallery__like-b"></button>
           </div>
         </li>
         <li class="user-gallery__item">
           <img src="./images/donb1.png" alt="Домбай" class="user-gallery__photo">
           <div class="user-gallery__caption">
             <h3 class="user-gallery__photo-name">Домбай</h3>
-            <div class="user-gallery__like-b"></div>
+            <button type="button" class="user-gallery__like-b"></button>
           </div>
         </li>
         <li class="user-gallery__item">
           <img src="./images/elbrus1.png" alt="Гора Эльбрус" class="user-gallery__photo">
           <div class="user-gallery__caption">
             <h3 class="user-gallery__photo-name">Гора Эльбрус</h3>
-            <div class="user-gallery__like-b"></div>
+            <button type="button" class="user-gallery__like-b"></button>
           </div>
         </li>
         <li class="user-gallery__item">
           <img src="./images/donb1.png" alt="Домбай" class="user-gallery__photo">
           <div class="user-gallery__caption">
             <h3 class="user-gallery__photo-name">Домбай</h3>
-            <div class="user-gallery__like-b"></div>
+            <button type="button" class="user-gallery__like-b"></button>
           </div>
         </li>
         <li class="user-gallery__item">
           <img src="./images/kar1.jpg" alt="Карачаево-Черкессия" class="user-gallery__photo">
           <div class="user-gallery__caption">
             <h3 class="user-gallery__photo-name">Карачаево-Черкессия</h3>
-            <div class="user-gallery__like-b"></div>
+            <button type="button" class="user-gallery__like-b"></button>
           </div>
         </li>
       </ul>
@@ -87,18 +84,18 @@
 
   <div class="popup">
     <div class="popup__content">
-      <button class="popup__close"></button>
+      <button type="button" class="popup__close"></button>
       <h4 class="popup__info">Редактировать профиль</h4>
-      <form class="popup__form">
-        <input type="text" class="popup__user-name">
-        <input type="text" class="popup__user-info">
-        <button class="popup__button-submit"><span class="popup__text-submit">Сохранить</span></button>
+      <form name="inform" class="popup__form">
+        <input type="text" name="user-name" class="popup__input popup__input_element_user-name">
+        <input type="text" name="user-info" class="popup__input popup__input_element_user-info">
+        <button type="submit" class="popup__button-submit">Сохранить</button>
       </form>
     </div>
   </div>
 
 
-  <script src="pages/index.js"></script>
+  <script src="scripts/index.js"></script>
 
 </body>
 
