--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button type="button" class="user__add-info"></button>
         <h2 class="user__info">Исследователь океана</h2>
       </div>
-      <button class="user__add-photo"></button>
+      <button type="button" class="user__add-photo"></button>
     </section>
 
     <section class="user-gallery">
