исправить ошибки валидации

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <input type="text" placeholder="Название" name="name" class="popup__input popup__input_element_card-name">
         <input type="text" placeholder="Ссылка на изображение" name="link"
           class="popup__input popup__input_element_card-link">
-        <button type="submit" class="popup__button-submit pupup__button-save">Создать</button>
+        <button type="submit" class="popup__button-submit popup__button-save">Создать</button>
       </form>
     </div>
   </div>
