--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
   </footer>
 
 
-  <div class="popup">
+  <div class="popup popup_edit-profile">
     <div class="popup__content">
-      <button type="button" class="popup__close"></button>
+      <button type="button" class="popup__close popup__close_edit"></button>
       <h4 class="popup__info">Редактировать профиль</h4>
       <form name="inform" class="popup__form">
-        <input type="text" name="user-name" class="popup__input popup__input_element_user-name">
-        <input type="text" name="user-info" class="popup__input popup__input_element_user-info">
+        <input type="text" placeholder="Имя" name="user-name" class="popup__input popup__input_element_user-name">
+        <input type="text" placeholder="Род деятельности" name="user-info"
+          class="popup__input popup__input_element_user-info">
         <button type="submit" class="popup__button-submit">Сохранить</button>
       </form>
     </div>
@@ -80,7 +81,7 @@
   <template class="template">
     <li class="user-gallery__item">
       <button type="button" class="user-gallery__delete-button"></button>
-      <img src="#" alt="Фото" class="user-gallery__photo">
+      <img src="#" alt="#" class="user-gallery__photo">
       <div class="user-gallery__caption">
         <h3 class="user-gallery__photo-name"></h3>
         <button type="button" class="user-gallery__like-b"></button>
