--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
     <div class="popup__content">
       <button type="button" class="popup__close popup__close_edit"></button>
       <h4 class="popup__info">Редактировать профиль</h4>
-      <form name="inform" class="popup__form">
-        <input type="text" placeholder="Имя" name="user-name" class="popup__input popup__input_element_user-name">
-        <input type="text" placeholder="Род деятельности" name="user-info"
-          class="popup__input popup__input_element_user-info">
+      <form name="inform" class="popup__form popup__form_info" novalidate>
+        <input type="text" placeholder="Имя" name="name" minlength="2" maxlength="40"
+          class="popup__input popup__input_element_user-name" id="user-name" required>
+        <span class="popup__error" id="user-name-error"></span>
+        <input type="text" placeholder="Род деятельности" name="info" minlength="2" maxlength="200"
+          class="popup__input popup__input_element_user-info" id="user-info" required>
+        <span class="popup__error" id="user-info-error"></span>
         <button type="submit" class="popup__button-submit">Сохранить</button>
       </form>
     </div>
@@ -55,10 +58,13 @@
     <div class="popup__content">
       <button type="button" class="popup__close popup__close-add"></button>
       <h4 class="popup__info">Новое место</h4>
-      <form name="add" class="popup__form popup__form_add">
-        <input type="text" placeholder="Название" name="name" class="popup__input popup__input_element_card-name">
-        <input type="text" placeholder="Ссылка на изображение" name="link"
-          class="popup__input popup__input_element_card-link">
+      <form name="add" class="popup__form popup__form_add" novalidate>
+        <input type="text" placeholder="Название" name="name" id="place-name"
+          class="popup__input popup__input_element_card-name" required>
+        <span class="popup__error" id="place-name-error"></span>
+        <input type="url" placeholder="Ссылка на изображение" name="link" id="link-url"
+          class="popup__input popup__input_element_card-link" required>
+        <span class="popup__error" id="link-url-error"></span>
         <button type="submit" class="popup__button-submit popup__button-save">Создать</button>
       </form>
     </div>
@@ -89,7 +95,7 @@
     </li>
   </template>
 
-
+  <script src="scripts/validate.js"></script>
   <script src="scripts/index.js"></script>
 
 </body>
