--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       <button type="button" class="popup__close popup__close_edit"></button>
       <h4 class="popup__info">Редактировать профиль</h4>
       <form name="inform" class="popup__form popup__form_info" novalidate>
-        <input type="text" placeholder="Имя" name="name" minlength="2" maxlength="40"
-          class="popup__input popup__input_element_user-name" id="user-name" required>
+        <input type="text" name="name" minlength="2" maxlength="40" class="popup__input popup__input_element_user-name"
+          id="user-name" required>
         <span class="popup__error" id="user-name-error"></span>
-        <input type="text" placeholder="Род деятельности" name="info" minlength="2" maxlength="200"
-          class="popup__input popup__input_element_user-info" id="user-info" required>
+        <input type="text" name="info" minlength="2" maxlength="200" class="popup__input popup__input_element_user-info"
+          id="user-info" required>
         <span class="popup__error" id="user-info-error"></span>
         <button type="submit" class="popup__button-submit">Сохранить</button>
       </form>
