--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body class="page">
   <header class="header">
-    <img src="./images/logo.svg" alt="Место" class="logo">
+    <img src= "<%=require('./images/logo.svg')%>" alt="Место" class="logo">
   </header>
 
   <main class="content">
 
     <section class="user">
-      <img src="./images/mainimage.jpg" alt="Фото" class="user__image">
+      <img src="<%=require('./images/mainimage.jpg')%>" alt="Фото" class="user__image">
       <div class="user__description">
         <h1 class="user__name">Жак-Ив Кусто</h1>
         <button type="button" class="user__add-info"></button>
@@ -59,7 +58,7 @@
       <button type="button" class="popup__close popup__close-add"></button>
       <h4 class="popup__info">Новое место</h4>
       <form name="add" class="popup__form popup__form_add" novalidate>
-        <input type="text" placeholder="Название" name="name" minlength="2" maxlength="40" id="place-name"
+        <input type="text" placeholder="Название" name="place-name" minlength="2" maxlength="40" id="place-name"
           class="popup__input popup__input_element_card-name" required>
         <span class="popup__error" id="place-name-error"></span>
         <input type="url" placeholder="Ссылка на изображение" name="link" id="link-url"
@@ -94,8 +93,6 @@
       </div>
     </li>
   </template>
-
-  <script type="module" src="scripts/index.js"></script>
 
 
 </body>
