исправлены ошибки после автотестов

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
     <section class="user">
       <div class="user__image-container">
-      <img src="" alt="Фото" class="user__image">
+      <img src="#" alt="Фото" class="user__image">
       </div>
       <div class="user__description">
         <h1 class="user__name">Жак-Ив Кусто</h1>
@@ -87,7 +87,7 @@
       <button type="button" class="popup__close popup__close-add"></button>
       <h4 class="popup__info">Обновить аватар</h4>
       <form name="add" class="popup__form popup__form_add" novalidate>
-        <input type="url" placeholder="Ссылка на изображение" name="link" id="link-url"
+        <input type="url" placeholder="Ссылка на изображение" name="link" id="avatar-url"
           class="popup__input popup__input_element_card-link" required>
         <span class="popup__error" id="link-url-error"></span>
         <button type="submit" class="popup__button-submit popup__button-save">Сохранить</button>
