--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
       <form name="add" class="popup__form popup__form_add" novalidate>
         <input type="url" placeholder="Ссылка на изображение" name="link" id="avatar-url"
           class="popup__input popup__input_element_card-link" required>
-        <span class="popup__error" id="link-url-error"></span>
+        <span class="popup__error" id="avatar-url-error"></span>
         <button type="submit" class="popup__button-submit popup__button-save">Сохранить</button>
       </form>
     </div>
