--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,9 @@
   <template class="template">
     <li class="user-gallery__item">
       <button type="button" class="user-gallery__delete-button"></button>
+      <div class="user-gallery__photo-container">
       <img src="#" alt="#" class="user-gallery__photo">
+      </div>
       <div class="user-gallery__caption">
         <h3 class="user-gallery__photo-name"></h3>
         <div class="user-gallery__like-container">
